fixed post page wrapping text

--- a/bitlink-app/src/app/components/post-component/post-component.component.scss
+++ b/bitlink-app/src/app/components/post-component/post-component.component.scss
@@ -13,9 +13,9 @@ $grey-color: rgba(100, 100, 100);
   margin: 0;
   padding: 0;
 }
-#profile-icon {
-  width: 3rem;
-  height: 3rem;
+#post-profile-icon {
+  // width: 2.5rem;
+  // height: 2.5rem;
   object-fit: cover;
   border-radius: 50%;
   margin-left: 0.5rem;
